--- a/week6/Base.lproj/Main.storyboard
+++ b/week6/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--Items-->
@@ -60,25 +61,25 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="csK-2K-Kdg">
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="csK-2K-Kdg">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="awR-Ws-mtx">
-                                    <size key="itemSize" width="208" height="83"/>
+                                    <size key="itemSize" width="91" height="39"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="resultsCell" id="dSe-c9-NOz" customClass="PairCollectionViewCell" customModule="week6" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="64" width="208" height="83"/>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="resultsCell" id="dSe-c9-NOz" customClass="PairCollectionCell" customModule="week6" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="64" width="91" height="39"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                            <rect key="frame" x="0.0" y="0.0" width="208" height="83"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="91" height="39"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2FJ-Ie-axT">
-                                                    <rect key="frame" x="52" y="26" width="105" height="31"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2FJ-Ie-axT">
+                                                    <rect key="frame" x="0.0" y="8" width="91" height="31"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                     <nil key="highlightedColor"/>
@@ -86,20 +87,40 @@
                                             </subviews>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         </view>
-                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstAttribute="bottom" secondItem="2FJ-Ie-axT" secondAttribute="bottom" id="5mT-io-ACY"/>
+                                            <constraint firstItem="2FJ-Ie-axT" firstAttribute="top" secondItem="dSe-c9-NOz" secondAttribute="topMargin" id="Pgs-OF-QbI"/>
+                                            <constraint firstAttribute="trailing" secondItem="2FJ-Ie-axT" secondAttribute="trailing" id="q6C-LR-3aH"/>
+                                            <constraint firstItem="2FJ-Ie-axT" firstAttribute="leading" secondItem="dSe-c9-NOz" secondAttribute="leading" id="zcP-FF-dcN"/>
+                                        </constraints>
+                                        <size key="customSize" width="91" height="39"/>
                                         <connections>
                                             <outlet property="titleLabel" destination="2FJ-Ie-axT" id="yVB-fQ-vct"/>
                                         </connections>
                                     </collectionViewCell>
                                 </cells>
+                                <connections>
+                                    <outlet property="dataSource" destination="o1t-C3-GpP" id="D44-bp-xYV"/>
+                                    <outlet property="delegate" destination="o1t-C3-GpP" id="it8-vw-i6Y"/>
+                                </connections>
                             </collectionView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rEG-dB-dHn">
+                                <rect key="frame" x="259" y="570" width="82" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="82" id="dHZ-s2-f7y"/>
+                                </constraints>
+                                <state key="normal" title="Randomize!"/>
+                                <connections>
+                                    <action selector="randomTapped:" destination="o1t-C3-GpP" eventType="touchUpInside" id="xm3-t0-4Lm"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="csK-2K-Kdg" firstAttribute="leading" secondItem="pPp-ni-a0p" secondAttribute="leading" id="LBR-Ol-4rA"/>
-                            <constraint firstItem="csK-2K-Kdg" firstAttribute="top" secondItem="pPp-ni-a0p" secondAttribute="top" id="QZX-NA-dAE"/>
-                            <constraint firstItem="csK-2K-Kdg" firstAttribute="bottom" secondItem="7ja-FK-OGp" secondAttribute="top" id="rP7-55-SIL"/>
-                            <constraint firstAttribute="trailing" secondItem="csK-2K-Kdg" secondAttribute="trailing" id="s5Z-Nu-ruD"/>
+                            <constraint firstItem="rEG-dB-dHn" firstAttribute="centerX" secondItem="csK-2K-Kdg" secondAttribute="centerX" id="C27-zA-xct"/>
+                            <constraint firstItem="rEG-dB-dHn" firstAttribute="centerX" secondItem="pPp-ni-a0p" secondAttribute="centerX" id="L7S-Lp-2RP"/>
+                            <constraint firstItem="7ja-FK-OGp" firstAttribute="top" secondItem="rEG-dB-dHn" secondAttribute="bottom" id="M0L-kg-avq"/>
                         </constraints>
                     </view>
                     <connections>
